[tool.poetry]
name = "mullvad-python"
version = "0.1.6"
description = "Check Mullvad VPN connection status."
readme = "README.md"
authors = ["Franccesco Orozco <franccesco.orozco@codingdose.info>"]
repository = "https://github.com/franccesco/mullpy/"

[tool.poetry.dependencies]
python = "^3.4"
requests = "^2.19"
colorama = "^0.3.9"
click = "^6.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
coverage = "^4.5"
coveralls = "^1.3"

[tool.poetry.scripts]
mullpy = "mullvad_python.cli:main"
